--- a/src/components/core/Root/styles.less
+++ b/src/components/core/Root/styles.less
@@ -1,7 +1,7 @@
 @import "~styles/variables.less";
 @import "~styles/colors.less";
 
-.container {
+.container, .overlay {
     font-family: Equinor, sans-serif;
     width: 100%;
     height: 100%;
@@ -41,4 +41,15 @@
         line-height: calc(var(--grid-unit) * 3px);
         font-weight: 500;
     }
+}
+
+.overlay {
+    position: absolute;
+    overflow: visible;
+    width: 0;
+    height: 0;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+    top: 0; left: 0;
 }
