--- a/src/components/feedback/Banner/styles.less
+++ b/src/components/feedback/Banner/styles.less
@@ -10,7 +10,7 @@
     width: 100%;
     max-height: 0;
     transition: max-height .2s ease-in;
-    background-color: var(--color-white);
+    background-color: var(--color-primary-hover-alt1);
 
     @media (max-width: @mobile-max-width) {
         flex-direction: column;
@@ -44,6 +44,16 @@
 
             @media (max-width: @mobile-max-width) {
                 padding-right: .grid-unit(2px)[];
+            }
+
+            svg {
+                height: .grid-unit(5px)[];
+                width: .grid-unit(5px)[];
+
+                @media (max-width: @mobile-max-width) {
+                    height: .grid-unit(4px)[];
+                    width: .grid-unit(4px)[];
+                }
             }
         }
 
