--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -1,70 +1,82 @@
 @import '~styles/mixins.less';
 
 
-
-.inputContainer {
-    display:  flex;
+.inputContainer{
+    display: flex;
     flex-direction: column;
-    min-height: .grid-unit(5px)[];
-    max-height: .grid-unit(7px)[];
-    width: .grid-unit(41px)[];
-    background-color: var(--color-black-alt5);
-    border-bottom: 1px solid var(--color-primary-accent);
-    caret-color:  var(--color-primary);
 
-    &:hover {
-        cursor: text;
-    }
-
-    &.focus {
-        border-bottom: 2px solid var(--color-primary);
-
-        &.error{
-            border-bottom-color: var(--color-red);
-        }
-        .inputContent {
-            padding-bottom: calc(.grid-unit(1px)[] - 1px);
-        }
-
-    }
-
-    &.error {
-        border-bottom-color: var(--color-red);
-        caret-color: var(--color-red);
-
-        .label {
-            color: var(--color-red);
-        }
-    }
-
-    .label {
-        padding: 0 .grid-unit(1px)[];
-        font-size: 12px;
-        line-height: 20px;
-    }
-
+    
     .inputContent {
-        padding: 0 .grid-unit(1px)[] .grid-unit(1px)[] .grid-unit(1px)[];
-        display: flex;
+        display:  flex;
         justify-content: space-between;
+        min-height: .grid-unit(5px)[];
+        max-height: .grid-unit(7px)[];
+        width: .grid-unit(41px)[];
+        background-color: var(--color-black-alt5);
+        border-bottom: 1px solid var(--color-primary-accent);
+        caret-color: var(--color-primary);
+        padding: 0 .grid-unit(1px)[];
 
-        input {
-            font-size: 16px;
-            line-height: .grid-unit(3px)[];
-            width: 100%;
-            outline: none;
-            background-color: var(--color-black-alt5);
-            border:none;
+        &:hover {
+            cursor: text;
+        }
 
-            &::placeholder {
-                color: var(--color-primary-accent);
-                opacity: 0.8;
+        &.focus {
+            border-bottom: 2px solid var(--color-primary);
+    
+            &.error{
+                border-bottom-color: var(--color-red);
+            } 
+            .inputTextContent{
+                padding-bottom: calc(.grid-unit(1px)[] - 1px);
+
+            }
+        }
+    
+        &.error {
+            border-bottom-color: var(--color-red);
+            caret-color: var(--color-red);
+
+            .inputTextContent{
+                .label {
+                    color: var(--color-red);
+                }
+            }
+        }
+
+        .inputTextContent{
+            display: flex;
+            flex-direction: column;
+            padding-bottom: .grid-unit(1px)[];
+
+
+            .label {
+                font-size: 12px;
+                line-height: 20px;
+            }
+
+            input {
+                font-size: 16px;
+                line-height: .grid-unit(3px)[];
+                width: 100%;
+                outline: none;
+                background-color: var(--color-black-alt5);
+                border:none;
+    
+                &::placeholder {
+                    color: var(--color-primary-accent);
+                    opacity: 0.8;
+                }
             }
         }
         .icon {
+            justify-self: center;
             width: .grid-unit(3px)[];
             height: .grid-unit(3px)[];
         }
     }
-
+    .helperText{
+        padding: .grid-unit(1px)[] .grid-unit(1px)[] 0 .grid-unit(1px)[];
+        font-size: 11px;
+    }
 }
