--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -10,7 +10,7 @@
         justify-content: space-between;
         min-height: .grid-unit(5px)[];
         max-height: .grid-unit(7px)[];
-        width: .grid-unit(41px)[];
+        max-width: .grid-unit(41px)[];
         background-color: var(--color-black-alt5);
         border-bottom: 1px solid var(--color-primary-accent);
         caret-color: var(--color-primary);
