Update popover and use it to display current user

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -115,5 +115,6 @@
         margin: 0;
         padding: 0 .grid-unit(2px)[];
         box-sizing: border-box;
+        color: var(--color-black-alt2);
     }
 }
