--- a/src/components/general/Menu/styles.less
+++ b/src/components/general/Menu/styles.less
@@ -13,6 +13,7 @@
     section {
         margin: 0;
         padding: calc(var(--grid-unit) * 1px) 0;
+        white-space: nowrap;
 
         h5 {
             margin: calc(var(--grid-unit) * 1px) calc(var(--grid-unit) * 2px);
