Added standar error icon and changed isRequired with isOptional

--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -14,7 +14,7 @@
         background-color: var(--color-black-alt5);
         border-bottom: 1px solid var(--color-primary-accent);
         caret-color: var(--color-primary);
-        padding: 0 .grid-unit(1px)[];
+        padding: 0 .grid-unit(2px)[];
 
         &:hover {
             cursor: text;
@@ -69,7 +69,8 @@
 
             .label {
                 font-size: 12px;
-                line-height: 20px;
+                line-height: 12px;
+                padding-top: .grid-unit(1px)[];
             }
 
             input {
@@ -87,7 +88,6 @@
             }
         }
         .icon {
-            
             align-self: center;
             padding-left: .grid-unit(2px)[];
 
@@ -98,7 +98,7 @@
         }
     }
     .helperText{
-        padding: 0 .grid-unit(1px)[];
+        padding: 0 .grid-unit(2px)[];
         font-size: 11px;
         line-height: .grid-unit(2px)[];
         color: var(--color-black-alt1);
