--- a/src/components/general/IconButton/styles.less
+++ b/src/components/general/IconButton/styles.less
@@ -19,8 +19,10 @@
         color: var(--color-primary);
     }
 
-    &.isToggler .iconContainer {
-        border-radius: 1px;
+    &.isToggler {
+        .iconContainer {
+            border-radius: 1px;
+        }
     }
 
     &:hover {
@@ -49,6 +51,14 @@
             border-color: var(--color-primary);
             color: var(--color-white);
         }
+
+        &:not(.isToggler) {
+            .iconContainer {
+                width: calc(100% - (var(--grid-unit) * 1px));
+                height: calc(100% - (var(--grid-unit) * 1px));
+                margin: calc(var(--grid-unit) * .5px);
+            }   
+        }
     }
 
     &:active {
@@ -56,7 +66,7 @@
             background-color: var(--color-primary-alt4);
             border-color: var(--color-primary-alt4);
             box-shadow: 0 0 0 2px var(--color-primary-alt4);
-            color: var(--color-primary);
+            color: var(--color-primary) !important;
         }
     }
 }
