--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -14,7 +14,8 @@
         border-bottom: 1px solid var(--color-primary-accent);
         caret-color: var(--color-primary);
         padding: .grid-unit(1px)[] .grid-unit(2px)[];
-
+        border-radius: 4px 4px 0 0;
+        
         &:hover {
             cursor: text;
         }
