Set zindex on header and content

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -12,6 +12,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 2;
 
     &.comfortable {
         padding: 0 .grid-unit(2px)[];
