Fix app header styling

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -73,11 +73,12 @@
     .appNameLink,
     .appNameLink:visited,
     .appNameLink:hover,
+    .appNameLink:focus,
     .appNameLink.active {
         text-decoration: none;
-        color: var(--color-primary-accent);
+        color: var(--color-primary-accent) !important;
         font-size: 16px;
-        font-weight: 200;
+        font-weight: 400;
         display: inline-flex;
         height: 100%;
         align-items: center;
@@ -87,6 +88,7 @@
 .fusionTitleContainer,
 .fusionTitleContainer:visited,
 .fusionTitleContainer:hover,
+.fusionTitleContainer:focus,
 .fusionTitleContainer:active,
 .fusionLogo,
 .fusionTitle {
@@ -97,7 +99,7 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
-    color: var(--color-primary-accent);
+    color: var(--color-primary-accent) !important;
 }
 
 
