--- a/src/components/general/SelectionControls/Switch/styles.less
+++ b/src/components/general/SelectionControls/Switch/styles.less
@@ -22,7 +22,7 @@
             background-color:var(--color-supplementary-alt1);
 
             .activator{
-                transform: translateX(calc(34px - calc(var(--grid-unit) * 2px)));//34px - 16 || 8px
+                transform: translateX(calc(34px - calc(var(--grid-unit) * 2px)));//34px - 16px || 8px
                 background-color: var(--color-primary);
             }
         }
