Move app name link out of fusion link

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -88,13 +88,11 @@
     }
 }
 
-.fusionTitleContainer,
-.fusionTitleContainer:visited,
-.fusionTitleContainer:hover,
-.fusionTitleContainer:focus,
-.fusionTitleContainer:active,
-.fusionLogo,
-.fusionTitle {
+.fusionTitleContainer a,
+.fusionTitleContainer a:visited,
+.fusionTitleContainer a:hover,
+.fusionTitleContainer a:focus,
+.fusionTitleContainer a:active {
     padding: 0;
     height: 100%;
     display: flex;
@@ -116,6 +114,8 @@
 
 .fusionTitleContainer {
     grid-area: logo;
+    display: flex;
+    align-items: center;
 }
 
 .contentContainer {
