--- a/src/components/general/SelectionControls/Checkbox/styles.less
+++ b/src/components/general/SelectionControls/Checkbox/styles.less
@@ -1,29 +1,13 @@
 
 @import '~styles/mixins.less';
+@import '../inputStyles.less';
 
-.container {
-    height: .grid-unit(6px)[];
-    width: .grid-unit(6px)[];
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
-    input {
-        opacity: 0;
-        position: absolute;
-        box-shadow: none;
-        margin: 0;
-        width: .grid-unit(2px)[];
-        height: .grid-unit(2px)[];
-    }
+.checkboxContainer {
+    .inputStyles(checkmark, var(--color-primary), var(--color-black-alt4));
 
     input + label {
-        color: var(--color-white);
-        cursor: pointer;
-        display: flex;
-
-        &::before {
+        &::before{
             box-sizing: border-box;
             border: 1px solid var(--color-primary);
             content: '';
@@ -35,36 +19,18 @@
             text-align: center;
             transition: all .2s;
         }
-
-        span{
-            line-height: .grid-unit(2px)[];
-            display: inline-block;
-            position: relative;
-            text-align: center;
-            width: .grid-unit(2px)[];
-            height: .grid-unit(2px)[];
-        }
+      
 
         .checkmark {
+            width: .grid-unit(2px)[];
+            height: .grid-unit(2px)[];
             color: var(--color-white);
             transform: scale(0.8);
             opacity: 0;
             transition: all .1s;
         }
     }
-
-    //Checked
-    input:checked + label {
-        &::before {
-            border-color: var(--color-primary);
-            background-color:  var(--color-primary);
-        }
-
-        .checkmark {
-            transform: scale(1);
-            opacity: 1;
-        }
-    }
+  
 
     //Indeterminate
     input:indeterminate + label{
@@ -79,51 +45,5 @@
         }
     }
 
-    //Hover
-    &:hover{
-        &:not(.disabled) {
-            background-color: var(--color-primary-alt4);
-            border-radius: 50%;
-        }
-    }
-
-    //Active
-    &:active {
-        &:not(.disabled){
-            background-color: var(--color-primary-alt3);
-            border-radius: 50%;
-        }
-    }
-
-    //Disabled
-    &.disabled{
-        cursor: not-allowed;
-
-        input + label{
-            cursor: not-allowed;
-            &::before {
-                border-color: var(--color-black-alt4);
-                background: var(--color-white);
-            }
-            .checkmark {
-                opacity: 0;
-            }
-        }
-
-        input:checked + label{
-            &::before {
-                border-color: var(--color-black-alt4);
-                background: var(--color-black-alt4);
-
-            }
-            .checkmark {
-                opacity: 1;
-            }
-
-        }
-
-        
-      
-    }
 
 }
