--- a/src/components/general/SelectionControls/RadioButton/styles.less
+++ b/src/components/general/SelectionControls/RadioButton/styles.less
@@ -1,30 +1,11 @@
 
 @import '~styles/mixins.less';
+@import '../inputStyles.less';
 
-.container {
-    height: .grid-unit(6px)[];
-    width: .grid-unit(6px)[];
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    input {
-        opacity: 0;
-        position: absolute;
-        box-shadow: none;
-        margin: 0;
-        width: .grid-unit(2px)[];
-        height: .grid-unit(2px)[];
-    }
+.radioButtonContainer {
+    .inputStyles(dot, initial, initial);
 
     input + label {
-        color: var(--color-white);
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
         &::before {
             box-sizing: border-box;
             border: 1px solid var(--color-primary);
@@ -49,63 +30,6 @@
         }
     }
 
-    //Checked
-    input:checked + label {
-        &::before {
-            border-color: var(--color-primary);
-        }
-
-        .dot {
-            transform: scale(1);
-            opacity: 1;
-        }
-    }
-
-    //Hover
-    &:hover{
-        &:not(.disabled) {
-            background-color: var(--color-primary-alt4);
-            border-radius: 50%;
-        }
-    }
-
-    //Active
-    &:active {
-        &:not(.disabled){
-            background-color: var(--color-primary-alt3);
-            border-radius: 50%;
-        }
-    }
-
-    //Disabled
-    &.disabled{
-        cursor: not-allowed;
-
-        input + label{
-            cursor: not-allowed;
-            &::before {
-                border-color: var(--color-black-alt4);
-                background: var(--color-white);
-            }
-            .dot {
-                opacity: 0;
-            }
-        }
-
-        input:checked + label{
-            &::before {
-                border-color: var(--color-black-alt4);
-
-            }
-            .dot {
-                background-color: var(--color-black-alt4);
-                opacity: 1;
-            }
-
-        }
-
-        
-      
-    }
+    
 
 }
