--- a/src/components/general/SelectionControls/Checkbox/styles.less
+++ b/src/components/general/SelectionControls/Checkbox/styles.less
@@ -4,23 +4,16 @@
 
 
 .checkboxContainer {
-    .inputStyles(checkmark, var(--color-primary), var(--color-black-alt4));
+    .inputStyles(checkmark, var(--color-primary), var(--color-primary), var(--color-black-alt4));
 
     input + label {
         &::before{
-            box-sizing: border-box;
             border: 1px solid var(--color-primary);
-            content: '';
             width: .grid-unit(2px)[];
             height: .grid-unit(2px)[];
-            display: block;
-            position: absolute;
             border-radius: 2px;
-            text-align: center;
-            transition: all .2s;
         }
       
-
         .checkmark {
             width: .grid-unit(2px)[];
             height: .grid-unit(2px)[];
