--- a/src/components/general/SelectionControls/Switch/styles.less
+++ b/src/components/general/SelectionControls/Switch/styles.less
@@ -2,23 +2,16 @@
 @import '../inputStyles.less';
 
 .switchContainer {
-    .inputStyles(activator, var(--color-supplementary-alt1), var(--color-black-alt4));
+    .inputStyles(activator, var(--color-supplementary-alt1), var(--color-supplementary-alt1), var(--color-black-alt4));
 
     input + label {
         &::before {
-            box-sizing: border-box;
             border: 1px solid var(--color-black-alt3);
-            content: '';
-            position: absolute;
-            text-align: center;
-            transition: all .2s;
             height: .grid-unit(1px)[];
             width: 34px;
             border-radius: 4px;
             background-color: var(--color-black-alt3);
-            display: flex;
             align-items: center;
-            position: relative;
             z-index: 0;            
         }
         .activator{
@@ -33,39 +26,35 @@
             transform: translateX(calc(var(--grid-unit) * 2px - 1px));
         }
     }
+
     input:checked + label {
         border-color: var(--color-supplementary-alt1);
         .activator{
             transform: translateX(33px);
+            background-color: var(--color-primary);
         }
     }
 
-    // &:hover{
-    //     &:not(.disabled) {
-    //         .switch{
-    //             &.isActive{
-    //                 .activator{
-    //                     background-color: var(--color-primary-hover);
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
-
-    // &:active {
-    //     &:not(.disabled){
-    //         background-color: var(--color-primary-alt3);
-    //     }
-    // }
+    &:hover:not(.disabled){
+        input + label{
+            .activator{
+                background-color: var(--color-primary-hover);
+            }
+        }  
+    }
     
-    // &.disabled{
-    //     .switch {
-    //         background-color: var(--color-black-alt4);
-    //         .activator{
-    //             background-color: var(--color-black-alt4);
-    //         }
-    //     }
-    // }
+    &.disabled{
+        input + label{
+            &::before {
+                border-color: var(--color-black-alt4);
+                background-color: var(--color-black-alt4)
+            }
+            .activator {
+                opacity: 1;
+            }
+        }
+       
+    }
   
 }
 
