--- a/src/components/general/SelectionControls/inputStyles.less
+++ b/src/components/general/SelectionControls/inputStyles.less
@@ -1,7 +1,7 @@
 
 @import '~styles/mixins.less';
 
-.inputStyles(@selected-name, @checked-color, @disabled-checked-color) {
+.inputStyles(@selected-name, @checked-border-color, @checked-background-color, @disabled-checked-background-color) {
 
     height: .grid-unit(6px)[];
     width: .grid-unit(6px)[];
@@ -26,26 +26,22 @@
         justify-content: center;
         align-items: center;
 
-        // &::before {
-        //     box-sizing: border-box;
-        //     border: 1px solid var(--color-primary);
-        //     content: '';
-        //     width: .grid-unit(2px)[];
-        //     height: .grid-unit(2px)[];
-        //     display: block;
-        //     position: absolute;
-        //     border-radius: @border-radius;
-        //     text-align: center;
-        //     transition: all .2s;
-        // }
+        &::before {
+            box-sizing: border-box;
+            content: '';
+            display: flex;
+            position: absolute;
+            text-align: center;
+            transition: all .2s;
+        }
 
     }
 
     //Checked
     input:checked + label {
         &::before {
-            border-color: var(--color-primary);
-            background-color: @checked-color;
+            border-color:@checked-border-color;
+            background-color: @checked-background-color;
         }
 
         .@{selected-name} {
@@ -55,19 +51,16 @@
     }
 
     //Hover
-    &:hover{
-        &:not(.disabled) {
-            background-color: var(--color-primary-alt4);
-            border-radius: 50%;
-        }
+    &:hover:not(.disabled){
+        background-color: var(--color-primary-alt4);
+        border-radius: 50%;
     }
 
     //Active
-    &:active {
-        &:not(.disabled){
-            background-color: var(--color-primary-alt3);
-            border-radius: 50%;
-        }
+    &:active:not(.disabled) {
+        background-color: var(--color-primary-alt3);
+        border-radius: 50%;
+    
     }
 
     //Disabled
@@ -88,7 +81,7 @@
         input:checked + label{
             &::before {
                 border-color: var(--color-black-alt4);
-                background-color: @disabled-checked-color;
+                background-color: @disabled-checked-background-color;
             }
             .@{selected-name} {
                 background-color: var(--color-black-alt4);
