Use fixed header instead of sticky to avoid the header ducking during scroll

--- a/src/components/core/Container/styles.less
+++ b/src/components/core/Container/styles.less
@@ -6,8 +6,15 @@
     height: 100%;
     position: relative;
     display: grid;
-    grid-template-rows: max-content auto;
     grid-template-areas:
         "header"
         "content";
+
+    &.comfortable {
+        grid-template-rows: calc((var(--grid-unit) * 10px) + 2px) auto;
+    }
+
+    &.compact {
+        grid-template-rows: calc((var(--grid-unit) * 6px) + 2px) auto;
+    }
 }
