--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -9,7 +9,7 @@
     align-items: center;
     background: white;
     border-bottom: 2px solid var(--color-black-alt4);
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
