Set border color to moss green when the context selector is active

--- a/src/components/core/ContextSelector/styles.less
+++ b/src/components/core/ContextSelector/styles.less
@@ -25,18 +25,18 @@
     min-width: calc(var(--grid-unit) * 50px);
     width: fit-content;
     border: none;
-    border-bottom: 1px solid transparent;
+    border-bottom: 2px solid transparent;
     outline: none;
     color: var(--color-primary-accent);
     background: none;
-    box-sizing: border-box;
+    box-sizing: border-box; 
 
     &::placeholder {
         color: var(--color-primary-accent);
     }
 
     &.focus {
-        border-bottom-color: var(--color-primary-accent);
+        border-bottom-color: var(--color-primary);
 
         &::placeholder {
             color: var(--color-black-alt3);
