--- a/src/components/general/ErrorMessage/styles.less
+++ b/src/components/general/ErrorMessage/styles.less
@@ -1,7 +1,6 @@
 @import "~styles/variables.less";
 
 
-
 .container {
     position: relative;
     width: 100%;
@@ -9,39 +8,48 @@
 
     .messageContainer {
         position: relative;
-        top: 0; left: 0; bottom: 0; right: 0;
+        left: 0; bottom: 0; right: 0;
         display: flex;
         align-content: center;
         align-items: center;
         justify-content: center;
         flex-direction: column;
         z-index: 999;
-        margin-top:calc(var(--grid-unit)*15px);
         
-        .title {
-            padding-top: calc(var(--grid-unit)* 6px);
-            font-size: 28px;
-            height: calc(var(--grid-unit)* 4px);
-        }
         .message {
-            font-size: 20px;
-            height: calc(var(--grid-unit)* 3px);
-            padding-bottom: calc(var(--grid-unit) * 10px);
-            padding-top: calc(var(--grid-unit)* 3px);
             text-align: center;
         }
-        &.small{
+
+        &.comfortable {
+            top: 0; 
+            margin-top:calc(var(--grid-unit) * 15px);
+
+            .title {
+                padding-top: calc(var(--grid-unit) * 6px);
+                font-size: 28px;
+                height: calc(var(--grid-unit) * 4px);
+            }
+
+            .message {
+                font-size: 20px;
+                height: calc(var(--grid-unit) * 3px);
+                padding-bottom: calc(var(--grid-unit) * 10px);
+                padding-top: calc(var(--grid-unit)* 3px);
+            }
+        }
+
+        &.compact {
             margin-top: 0;
-            position: relative;
             top: 50%;
             transform: translateY(-50%);
                     
-            .title{
+            .title {
                 padding-top: calc(var(--grid-unit)* 5px);
                 font-size: 16px;
                 height: calc(var(--grid-unit)* 3px);
                 font-weight: 600;
             }
+
             .message {
                 font-size: 16px;
                 height: calc(var(--grid-unit)* 2px);
