--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+    height: 100%;
 
     .tabsPane {
         display: flex;
@@ -9,6 +10,7 @@
         border-bottom: 1px solid var(--color-black-alt4);
         overflow-x: auto;
         scroll-behavior: smooth;
+        flex-shrink: 0;
 
         &::-webkit-scrollbar { 
             display: none; 
@@ -98,7 +100,7 @@
     }
     .tabContent {
         width: 100%;
-        height: 100%;
+        flex-grow: 1;
     }
     
 }
